# know-lang

./: .gitignore  .gitmodules  README.md  app_config.json  configuration.md  database_setup.md  pyproject.toml  test_file.py
.github/workflows/: black.yml  build_unity_pyinstaller.yml  package-windows.yml  pytest.yml
docker/application/: docker-compose.app.yml
dockers/pgvector_postgres/: Dockerfile  docker-compose.yml
knowlang/agents/unity/: README.md  __init__.py  grpc_models.py  grpc_service.py  proto_enums.py  serve.py  ui_generation_graph.py
knowlang/api/: README.md  config.py  main.py  main.spec
knowlang/api/chat/: router.py
knowlang/api/health/: router.py
knowlang/api/parse/: router.py
knowlang/api/unity_agent/: router.py
knowlang/assets/: README.md  __main__.py  config.py  db.py  models.py  processor.py  registry.py
knowlang/assets/codebase/: models.py  processor.py
knowlang/assets/registry/: config.py  factory.py  models.py  registry.py
knowlang/chat_bot/: __init__.py  chat_graph.py  chat_interface.py  feedback.py
knowlang/chat_bot/nodes/: base.py
knowlang/cli/: __init__.py  argparser.py  types.py
knowlang/cli/commands/: chat.py  parse.py
knowlang/configs/: __init__.py  base.py  chat_config.py  config.py  defaults.py  logging_config.py  retrieval_config.py  server_config.py  state_store_config.py
knowlang/core/: types.py
knowlang/database/: config.py  db.py
knowlang/evaluations/: indexer.py
knowlang/indexing/: chunk_indexer.py  codebase_manager.py  file_utils.py  increment_update.py
knowlang/indexing/state_store/: base.py  sqlalchemy.py
knowlang/mcp/: README.md  claude_desktop_config.json  common.py  server.py
knowlang/mcp/tools/: vector_search.py
knowlang/models/: embedding_providers.py  embeddings.py  types.py
knowlang/models/nomic_ai/: model.py
knowlang/parser/: factory.py
knowlang/parser/base/: parser.py
knowlang/search/: base.py
knowlang/search/reranker/: base.py  factory.py  knowlang_reranker.py  llm_rearnker.py
knowlang/search/search_graph/: graph.py  keyword_search_agent_node.py  vector_search_agent_node.py
knowlang/utils/: chunking_util.py  model_provider.py  offline_model.py
knowlang/vector_stores/: __init__.py  base.py  chroma.py  factory.py  mock.py  postgres.py  postgres_hybrid.py  sqlite.py
protos/unity/: ui_generation.proto
settings/: .env.example.app  .env.example.logging  .gitignore  app_config.example.json  evaluation_config.example.json  registry.yaml
settings/assets/: codebase.yaml
settings/assets/unity/: codebase.yaml  visualscript.yaml
src/knowlang/chat_bot/: api.py  chat_graph.py  chat_interface.py
src/knowlang/cli/: __init__.py  argparser.py  parser.py  types.py
src/knowlang/configs/: config.py  retrieval_config.py
src/knowlang/core/: types.py
tests/assets/: test_registry.py
tests/chat/: conftest.py  test_chat_graph.py  test_chat_interface.py
tests/configs/: test_configs.py
tests/evaluations/: conftest.py  test_codesearchnet_provider.py  test_config_manager.py  test_evaluation_runner.py  test_grid_search.py  test_indexer.py  test_metrics.py
tests/indexing/: test_chunk_indexer.py
tests/search/: test_keyword_search_agent_node.py  test_reranking.py  test_search_graph.py  test_search_strategies.py  test_searchable_store.py  test_vector_search_agent_node.py
tests/vector_store/: test_postgres.py  test_postgres_hybrid.py  test_sqlite.py
(+86 files in other folders)
