[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "knowlang"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "AI-powered code understanding assistant that helps developers explore and understand complex codebases through semantic search and intelligent Q&A"
authors = [
  { name = "gabhyun kim", email = "kimgb415@gmail.com" },
  { name = "mukhtar kussaiynbekov", email = "mukhtarkussaiynbekov@gmail.com" },
  { name = "kolbe yang", email = "kyanghasglasses@gmail.com" },
]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10, <3.13"

[project.urls]
Homepage = "https://knowlang.dev"
Repository = "https://github.com/knowlangorg/know-lang"

[project.scripts]
knowlang = "knowlang.cli:cli_main"

[tool.hatch.metadata.hooks.uv-dynamic-versioning]
dependencies = [
    "pydantic-ai>=0.1.0",
    "gitpython>=3.1.44,<4.0.0",
    "tree-sitter>=0.24.0,<0.25.0",
    "pydantic-settings>=2.7.1,<3.0.0",
    "sqlalchemy>=2.0.38,<3.0.0",
]

[dependency-groups]
# UI Interfaces
gradio = ["gradio>=5.13.1,<6.0.0"]
# Databases
vecs = ["vecs>=0.4.5,<0.5.0"]
chromadb = ["chromadb>=0.6.3,<0.7.0"]
ollama = ["ollama>=0.4.7,<0.5.0"]
# Model Providers
voyage = ["voyageai>=0.3.2,<0.4.0"]
pytorch = ["torch>=2.6.0,<3.0.0", "transformers>=4.49.0,<5.0.0"]
nomic-ai = ["einops>=0.8.1,<0.9.0", "sentence-transformers>=4.0.1,<5.0.0"]
# Analytics
mixpanel = ["mixpanel>=4.10.1,<5.0.0"]
# Additional languages
python = ["tree-sitter-python>=0.23.6,<0.24.0"]
cpp = ["tree-sitter-cpp>=0.23.4,<0.24.0"]
typescript = ["tree-sitter-typescript>=0.23.2,<0.24.0"]
# MCP Integration
mcp = ["mcp[cli]>=1.6.0,<2.0.0"]
# Sqlite Vector Store
sqlite = [
    "sqlite-vec>=0.1.6",
]
# ASGI Server
server = [
    "fastapi>=0.115.12",
    "sse-starlette>=2.3.5",
]
# All
all = [
    "fastapi>=0.115.12",
    "sse-starlette>=2.3.5",
    "gradio>=5.13.1,<6.0.0",
    "chromadb>=0.6.3,<0.7.0",
    "vecs>=0.4.5,<0.5.0",
    "sqlite-vec>=0.1.6",
    "voyageai>=0.3.2,<0.4.0",
    "mixpanel>=4.10.1,<5.0.0",
    "tree-sitter-python>=0.23.6,<0.24.0",
    "tree-sitter-cpp>=0.23.4,<0.24.0",
    "tree-sitter-typescript>=0.23.2,<0.24.0",
    "ollama>=0.4.7,<0.5.0",
    "torch>=2.6.0,<3.0.0",
    "transformers>=4.49.0,<5.0.0",
    "einops>=0.8.1,<0.9.0", 
    "sentence-transformers>=4.0.1,<5.0.0",
    "mcp[cli]>=1.6.0,<2.0.0",
]
# Dev dependencies
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]
packaging = [
    "pyinstaller>=6.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["knowlang"]

[tool.pytest.ini_options]
testpaths = "tests"
